codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__shake_preview_sol_codex_turn_pace.snap
---
source: tui/src/chatwidget/tests/shake_preview_tests.rs
expression: rendered
---
  Shake (elide): frees ~100k of 280k (36%), 24 tool outputs + 8 text blocks recoverable.
  Pays back after ~5 requests ≈ 2 turns at this session's pace.

  Recent ~4k tokens stay protected.
  Idle: 0m since last response. Cache expiry is not observed.
  Request estimate: 300,000 → 200,000 (latest context minus reduction; overhead may
  differ).
  Codex: May leave >272k tier (2x input, 1.5x output); ~72,000 tokens margin.
  Cold cache: next input ~67% cheaper.
  Warm cache, full invalidation: next input ~233% more.
  Assumes standard rates, fixed sizes and subsequent cache hits.
  Configured compact budget: 290,000. Estimated headroom 0 → 90,000 tokens (model may
  compact earlier).
  Favor shake when it delays compaction, not simply before /compact.

  Conversation excludes instructions/tools. Costs exclude recovery and output; not plan-
  allowance predictions.


› 1. Shake
  2. Cancel

  enter select · esc back
