codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__shake_preview_unknown_billing.snap
---
source: tui/src/chatwidget/tests/shake_preview_tests.rs
expression: "render_bottom_popup(&chat, 90)"
---
  Shake (elide): frees ~47k of 118k (40%), 24 tool outputs + 8 text blocks recoverable.
  Payback unavailable for this model or billing route.

  Recent ~4k tokens stay protected.
  Idle age unavailable; cache state unknown.
  Request estimate: 130,000 → 83,000 (latest context minus reduction; overhead may
  differ).
  Auto-compact headroom unavailable for the active budget.
  Favor shake when it delays compaction, not simply before /compact.

  Conversation excludes instructions/tools. Costs exclude recovery and output; not plan-
  allowance predictions.


› 1. Shake
  2. Cancel

  enter select · esc back
