codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__smart_compact_notice_mechanical_fallback.snap
---
source: tui/src/chatwidget/tests/mcp_startup.rs
assertion_line: 1146
expression: rendered
---
⚠ Shook 2 tool outputs (~1500 tokens freed).; no Luna handoff was created; the
  mechanical Elide checkpoint is retained.
